@@ -10,7 +10,7 @@
 -->
 <config xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:noNamespaceSchemaLocation="urn:magento:framework:Module/etc/module.xsd">
-    <module name="SID_SecureEFT" setup_version="2.4.1">
+    <module name="SID_SecureEFT" setup_version="2.4.2">
         <sequence>
             <module name="Magento_Checkout"/>
             <module name="Magento_Sales"/>
